--- a/css/common.css
+++ b/css/common.css
@@ -161,7 +161,7 @@ img {
   width: 100%;
   height: 34px;
   text-indent: -9999px;
-  background: url(/images/common/logo1.png) no-repeat;
+  background: url(./images/common/logo1.png) no-repeat;
 }
 /* .head .pc_nav {
 } */
@@ -319,7 +319,7 @@ img {
   width: 5px;
   height: 4px;
   margin: 0 0 0 5px;
-  background: url(/images/common/lang_arr1.png) no-repeat;
+  background: url(./images/common/lang_arr1.png) no-repeat;
   transition: all 0.3s;
 }
 .head .gnb .language.active > a i {
@@ -384,7 +384,7 @@ img {
 }
 
 .bl .head h1 a {
-  background: url(/images/common/logo2.png) no-repeat;
+  background: url(./images/common/logo2.png) no-repeat;
 }
 .bl .head .pc_nav > ul > li > a {
   color: #000;
@@ -400,14 +400,14 @@ img {
   color: #000;
 }
 .bl .head .gnb .language > a i {
-  background: url(/images/common/lang_arr2.png) no-repeat;
+  background: url(./images/common/lang_arr2.png) no-repeat;
 }
 .bl .head .gnb .btnmenu > div {
   background: #000;
 }
 
 .wh .head h1 a {
-  background: url(/images/common/logo1.png) no-repeat;
+  background: url(./images/common/logo1.png) no-repeat;
 }
 .wh .head .pc_nav > ul > li > a {
   color: #fff;
@@ -423,7 +423,7 @@ img {
   color: #fff;
 }
 .wh .head .gnb .language > a i {
-  background: url(/images/common/lang_arr1.png) no-repeat;
+  background: url(./images/common/lang_arr1.png) no-repeat;
 }
 .wh .head .gnb .btnmenu > div {
   background: #fff;
@@ -437,7 +437,7 @@ img {
   z-index: 1000;
   width: 100%;
   height: 100vh;
-  background: url(/images/common/all_bg.jpg) no-repeat center;
+  background: url(./images/common/all_bg.jpg) no-repeat center;
   background-size: cover;
   transition: all 0.6s ease-out;
 }
