--- a/css/common.css
+++ b/css/common.css
@@ -4,10 +4,37 @@
   margin: 0;
   padding: 0;
 }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+th,
+td,
+li,
+dt,
+dd,
+a,
+p,
+input,
+textarea,
+select,
+option,
+button {
+  color: #555;
+  font-family: "Noto Sans KR", "돋움", dotum, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+}
 html,
 body {
   width: 100%;
   height: 100%;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 html {
   overflow-y: scroll;
